authentication start
